# ship-lua

./: .gitignore  .gitmodules  AGENTS.en.md  AGENTS.md  CMakeLists.txt  PLAN.en.md  PLAN.md  README.md  README.pt-BR.md  build-game.ps1  build-linkspan.ps1
.github/workflows/: core-linux.yml  core-windows.yml  package-examples.yml
coordination/: INTEGRATION.en.md  INTEGRATION.md  STATUS.en.md  STATUS.md
coordination/claims/: API-001.en.md  API-001.md  ARCH-001.en.md  ARCH-001.md  BIND-001.en.md  BIND-001.md  CODEGEN-001.en.md  CODEGEN-001.md  CODEGEN-002-003.en.md  CODEGEN-002-003.md  CORE-001.en.md  CORE-001.md  DOC-005.en.md  DOC-005.md  EVENT-001.en.md  EVENT-001.md  EXAMPLE-001.en.md  EXAMPLE-001.md  HOTKEY-001.md  LINK-003-CONFLICTS.md  LINK-003.md  LINK-004.md  LINK-005.md  LINK-006.md  MM-001.en.md  MM-001.md  MM-002.en.md  MM-002.md  MM-003.en.md  MM-003.md  MM-004.en.md  MM-004.md  MM-005.en.md  MM-005.md  MM-HOTKEY-001.md  MM-JUMP-001.md  MM-WORLD-001.md  MM-WORLD-002.md  MOD-001.en.md  MOD-001.md  (+41 more)
coordination/handoffs/: API-001.en.md  API-001.md  ARCH-001.en.md  ARCH-001.md  BIND-001.en.md  BIND-001.md  CODEGEN-001.en.md  CODEGEN-001.md  CODEGEN-002-003.en.md  CODEGEN-002-003.md  CORE-001.en.md  CORE-001.md  DOC-005.en.md  DOC-005.md  EVENT-001.en.md  EVENT-001.md  EXAMPLE-001.en.md  EXAMPLE-001.md  HOTKEY-001.md  LINK-003-CONFLICTS.md  LINK-004.md  LINK-005.md  LINK-006.md  MM-001.en.md  MM-001.md  MM-002.en.md  MM-002.md  MM-003.en.md  MM-003.md  MM-004.en.md  MM-004.md  MM-005.en.md  MM-005.md  MM-HOTKEY-001.md  MM-JUMP-001.md  MM-WORLD-001.md  MM-WORLD-002.md  MOD-001.en.md  MOD-001.md  MOD-003.en.md  (+38 more)
docs/: README.en.md  README.md  cross-world-assets.en.md  cross-world-assets.md  host-integration.en.md  host-integration.md  link-span-process.md  manifest-validator.en.md  manifest-validator.md  shipmod-cli.en.md  shipmod-cli.md  writing-mods.en.md  writing-mods.md
docs/agents/: Plans.md
docs/api/: cpp-codegen.en.md  cpp-codegen.md  event-dispatcher.en.md  event-dispatcher.md  frame-timers.en.md  frame-timers.md  generated-docs.en.md  generated-docs.md  lua-binding.en.md  lua-binding.md  schema-contract.en.md  schema-contract.md
docs/architecture/: host-hook-inventory.en.md  host-hook-inventory.md
docs/wiki/: Cross-World-Assets.md  Example-Mods.md  Getting-Started.md  Home.md  Troubleshooting.md  Writing-Your-First-Mod.md
examples/actor-spawn/: main.lua  manifest.toml
examples/bunny-hood/: main.lua  manifest.toml
examples/clock-tower-to-market/: main.lua  manifest.toml
examples/custom-mask/: main.lua  manifest.toml
examples/dog-spawner/: README.md  main.lua  manifest.toml
examples/elegy-statue/: main.lua  manifest.toml
examples/fox-mask/: main.lua  manifest.toml
examples/frame-counter/: main.lua  manifest.toml
examples/hello-runtime/: README.md  main.lua  manifest.toml
examples/hello-world/: README.md  main.lua  manifest.toml
examples/jump/: README.md  main.lua  manifest.toml
examples/kafei-puppet/: main.lua  manifest.toml
examples/link-home-to-clock-tower/: main.lua  manifest.toml
examples/oot-kokiri-sword/: main.lua  manifest.toml
examples/rauru/: main.lua  manifest.toml
rfcs/: 0001-shiplua-architecture.en.md  0001-shiplua-architecture.md  0002-common-hotkey-registration.md  0003-mm-player-jump.md  0004-cross-world-session.md  0005-authenticated-world-handoff.md  0005-portable-item-catalog.md  0006-authenticated-world-handoff.md  0007-cross-world-assets.md  0008-capability-registry.md  0008-link-span-supervisor.md  0008-pr31-api-contract.md  0009-generic-actor-api.en.md  0009-generic-actor-api.md
schema/: api.yml  capabilities.yml  events.yml  manifest.schema.json
src/api/: LuaApiBinding.cpp
src/capability/: CapabilityRegistry.cpp
src/events/: EventDispatcher.cpp
src/handles/: HandleRegistry.cpp
src/host/: ModHost.cpp
src/input/: HotkeyRegistry.cpp
src/launcher/: AssetDiscovery.cpp  main.cpp
src/lifecycle/: ModLifecycle.cpp
src/manifest/: DependencyResolver.cpp  ManifestParser.cpp  ModDiscovery.cpp  PackageExtractor.cpp  SemVersion.cpp
src/mock/: MockActorProvider.cpp  (+1 more)
tests/: CMakeLists.txt
tests/conformance/: HelloWorldConformanceTests.cpp  PackageHelloWorld.py  test_package_hello_world.py
tests/contract/: ApiContractTests.cpp  MockRuntimeTests.cpp
tests/fixtures/manifest/: invalid-missing-name.toml  invalid-syntax.toml  invalid-version.toml  valid-complete.toml  valid-minimal.toml  valid-requires-both-false.toml  valid-requires-both-games.toml
tests/fixtures/mod-runner/broken-mod/: main.lua  manifest.toml
tests/fixtures/mod-runner/broken-mod/tests/: broken_test.lua
tests/fixtures/mod-runner/failing-mod/: main.lua  manifest.toml
tests/fixtures/mod-runner/failing-mod/tests/: fail_test.lua
tests/fixtures/mod-runner/no-tests-mod/: main.lua  manifest.toml
tests/fixtures/mod-runner/passing-mod/: main.lua  manifest.toml
tests/fixtures/mod-runner/passing-mod/tests/: 01_basic_test.lua  02_isolation_test.lua
tests/fixtures/validator/valid-mod/: manifest.toml
tests/launcher/: AssetDiscoveryTests.cpp
tests/schema/: test_generate_api_contracts.py  test_generate_api_docs.py  test_generate_cpp_api.py  test_validate_api_schemas.py
tests/tools/: BuildGameScriptTests.ps1  BuildLinkSpanPackagingTests.ps1  test_shipmod.py
tests/unit/: AtomicFileTests.cpp  CapabilityRegistryTests.cpp  DependencyResolverTests.cpp  EventDispatcherTests.cpp  FrameTimerSchedulerTests.cpp  GeneratedApiBindingsTests.cpp  HandleRegistryTests.cpp  KeyValueStorageTests.cpp  LuaApiBindingTests.cpp  ManifestDiscoveryTests.cpp  ManifestHostTests.cpp  MockActorProviderTests.cpp  MockRuntimeTests.cpp  ModLifecycleTests.cpp  ModRootLoaderTests.cpp  ModTestRunnerTests.cpp  PackageExtractorTests.cpp  PortableItemCatalogTests.cpp  RuntimeTests.cpp  SemVersionTests.cpp  WorldAssetCatalogTests.cpp  WorldHandoffTests.cpp  WorldSessionTests.cpp
tools/: LinkSpanPackaging.psm1  generate_api_contracts.py  generate_api_docs.py  generate_cpp_api.py  manifest_validator.cpp  mod_test_runner.cpp  shipmod.py  validate_api_schemas.py
(+40 files in other folders)
